feat: rewrite with spotify client